# blankslade

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  glwidget.cpp  main.cpp
src/gui/: main.ui
